@@ -320,6 +320,9 @@ ssl_cert_def=Same file as private key
 ssl_cert_oth=Separate file
 ssl_redirect=Redirect non-SSL requests to SSL mode?
 ssl_extracas=Additional certificate files<br>(for chained certificates)
+ssl_extracasdef=Same as global SSL settings
+ssl_extracasnone=None for this IP address
+ssl_extracasbelow=Entered below ..
 ssl_err=Failed to save SSL options
 ssl_ekey=The SSL private key file $1 does not exist or does not contain a PEM format key
 ssl_ecert=The SSL certificate file $1 does not exist or does not contain a PEM format certificate
@@ -750,6 +753,8 @@ ipkey_ips=For connections to IP addresses
 ipkey_err=Failed to save SSL key
 ipkey_eip='$1' is not a valid IP address
 ipkey_eips=No IP addresses entered
+ipkey_eextracas=No additional certificate files entered
+ipkey_eextraca=Additional certificate file $1 does not exist
 
 descs_title=Module Titles
 descs_info=This page allows you to specify alternate titles for Webmin modules, to override their standard descriptions.
